# interview

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
task1/: CMakeLists.txt  main.cpp
task1/lib/: CMakeLists.txt
task1/lib/include/ContactsLib/: MainWindow.hpp
task1/lib/include/ContactsLib/Database/: DatabaseManager.hpp  IRepository.hpp  JsonRepository.hpp  SQLRepository.hpp
task1/lib/include/ContactsLib/Models/: Contact.hpp  ContactListModel.hpp
task1/lib/include/ContactsLib/Utilities/: Validator.hpp
task1/lib/include/ContactsLib/Widgets/: ButtonsWidget.hpp  ContactFormWidget.hpp  ContactListWidget.hpp
task1/lib/src/: MainWindow.cpp
task1/lib/src/Database/: DatabaseManager.cpp  JsonRepository.cpp  SQLRepository.cpp
task1/lib/src/Models/: Contact.cpp  ContactListModel.cpp
task1/lib/src/Utilities/: Validator.cpp
task1/lib/src/Widgets/: ButtonsWidget.cpp  ContactFormWidget.cpp  ContactListWidget.cpp
task1/lib/tests/: CMakeLists.txt  ContactTests.cpp  ValidatorTests.cpp
task2/: CMakeLists.txt  main.cpp
task2/lib/: CMakeLists.txt
task2/lib/include/ThreadsLib/: BaseGenerator.hpp  PrimeNumberGenerator.hpp  TwoWorkersWriter.hpp
task2/lib/src/: PrimeNumberGenerator.cpp  TwoWorkersWriter.cpp
task2/lib/tests/: CMakeLists.txt  GeneratorTests.cpp
