cmake_minimum_required(VERSION 3.14)
#-------------------------------------------------------------------------------
project(Project VERSION 1.0.0 LANGUAGES CXX)
#-------------------------------------------------------------------------------
add_subdirectory(task1)
add_subdirectory(task2)
#-------------------------------------------------------------------------------