cmake_minimum_required(VERSION 3.14)
#-------------------------------------------------------------------------------
project(ContactsView VERSION 1.0.0 LANGUAGES CXX)
#-------------------------------------------------------------------------------
add_executable(${PROJECT_NAME} main.cpp)
#-------------------------------------------------------------------------------
target_link_libraries(${PROJECT_NAME} PUBLIC
        ContactsLib
)
#-------------------------------------------------------------------------------
add_subdirectory(lib)
#-------------------------------------------------------------------------------