cmake_minimum_required(VERSION 3.14)
#-------------------------------------------------------------------------------
project(Threads VERSION 1.0.0 LANGUAGES CXX)
#-------------------------------------------------------------------------------
add_executable(${PROJECT_NAME} main.cpp)
#-------------------------------------------------------------------------------
target_link_libraries(${PROJECT_NAME} PUBLIC
        ThreadsLib
)
#-------------------------------------------------------------------------------
add_subdirectory(lib)
#-------------------------------------------------------------------------------