cmake_minimum_required(VERSION 3.14)
#-------------------------------------------------------------------------------
project(ThreadsTests)
#-------------------------------------------------------------------------------
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
#-------------------------------------------------------------------------------
find_package(GTest CONFIG REQUIRED)
#-------------------------------------------------------------------------------
add_executable(${PROJECT_NAME} ${SOURCES})
#-------------------------------------------------------------------------------
target_link_libraries(${PROJECT_NAME} PUBLIC GTest::gtest GTest::gtest_main ThreadsLib)
#-------------------------------------------------------------------------------
